syntax = "proto3";

package first_grpc;

service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){};
  rpc FindAllOrders(FindAllOrdersRequest) returns (FindAllOrdersResponse){};
  rpc FindOneOrders(FindOneOrdersRequest) returns (FindOneOrdersResponse){};
}

enum Status {
  PENDING = 0;
}

message Order {
  string order_id = 1;
  string account_id = 2;
  string asset_id = 3;
  int32 quantity = 4;
  Status status = 5;
}

message CreateOrderRequest {
  string account_id = 1;
  string asset_id = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message FindAllOrdersRequest {
  string account_id = 1;
}

message FindAllOrdersResponse {
  repeated Order orders = 1;
}

message FindOneOrdersRequest {
  string order_id = 1;
}

message FindOneOrdersResponse {
  Order order = 1;
}

